[gd_scene load_steps=3 format=3 uid="uid://bhxdw5q2etvki"]

[ext_resource type="Script" path="res://gdre_export_report.gd" id="1_vylry"]

[sub_resource type="Theme" id="Theme_m335r"]

[node name="GdreExportReport" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_m335r")
script = ExtResource("1_vylry")

[node name="ReportWindow" type="Window" parent="."]
title = "Project Recovery Report"
position = Vector2i(0, 36)
size = Vector2i(1152, 800)
visible = false
keep_title_visible = true

[node name="EditorMessageLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 79.0
offset_right = 918.0
offset_bottom = 173.0
theme_override_font_sizes/bold_font_size = 16
bbcode_enabled = true
text = "[b]Use Godot editor version <GODOT_VER> to edit the project.[/b]
Note: the project may be using a custom version of Godot. Detection for this has not been implemented yet.
If you find that you have many non-import errors upon opening the project 
(i.e. scripts or shaders have many errors), use the original game's binary as the export template."

[node name="LogFileLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 1097.0
offset_bottom = 67.0
bbcode_enabled = true
text = "Log file written to <LOG_FILE_URI>
[b]Please include this file when reporting an issue![/b]"

[node name="NotesLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 194.0
offset_right = 201.0
offset_bottom = 228.0
bbcode_enabled = true
text = "[b]Important Notes[/b]"

[node name="NoteTree" type="Tree" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 9.0
offset_top = 221.0
offset_right = -9.0
offset_bottom = 436.0
grow_horizontal = 2
hide_root = true

[node name="TotalsLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 450.0
offset_right = 203.0
offset_bottom = 484.0
bbcode_enabled = true
text = "[b]Totals[/b]"

[node name="TotalsTree" type="Tree" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 480.0
offset_right = -10.0
offset_bottom = 659.0
grow_horizontal = 2
columns = 2
hide_root = true

[node name="OpenFolderButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -47.0
offset_right = -62.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Open Folder"

[node name="OKButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 43.0
offset_top = -50.0
offset_right = 106.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "OK"

[connection signal="close_requested" from="ReportWindow" to="." method="_close_requested"]
[connection signal="meta_clicked" from="EditorMessageLabel" to="." method="_on_click_uri"]
[connection signal="meta_clicked" from="LogFileLabel" to="." method="_on_click_uri"]
[connection signal="pressed" from="OpenFolderButton" to="." method="_open_folder"]
[connection signal="pressed" from="OKButton" to="." method="_ok_pressed"]
